<?xml version="1.0" encoding="utf-8"?>
<GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="2"
    android:rowCount="4"
    android:paddingTop="10dp" >

    <LinearLayout
        android:layout_column="0"
        android:layout_columnWeight="0.5"
        android:layout_gravity="fill"
        android:layout_row="0"
        android:layout_rowWeight="0.2"
        android:orientation="vertical">

        <ImageView
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_gravity="center"
            android:scaleType="fitXY"
            android:src="@drawable/coffee" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/coffee"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="2€" />

        <TextView
            android:id="@+id/order_coffee_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="x 3"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|bottom"
            android:text="@string/btn_add_to_order" />
    </LinearLayout>

    <LinearLayout
        android:layout_column="1"
        android:layout_columnWeight="0.5"
        android:layout_gravity="fill"
        android:layout_row="0"
        android:layout_rowWeight="0.2"
        android:orientation="vertical">

        <ImageView
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_gravity="center"
            android:scaleType="fitXY"
            android:src="@drawable/soda" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/soda"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="2€" />

        <TextView
            android:id="@+id/order_soda_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="x 3"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|bottom"
            android:text="@string/btn_add_to_order" />
    </LinearLayout>

    <LinearLayout
        android:layout_column="0"
        android:layout_columnWeight="0.5"
        android:layout_gravity="fill_horizontal"
        android:layout_row="1"
        android:layout_rowWeight="0.2"
        android:orientation="vertical">

        <ImageView
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_gravity="center"
            android:scaleType="fitXY"
            android:src="@drawable/popcorn" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/popcorn"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="2€" />

        <TextView
            android:id="@+id/order_popcorn_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="x 3"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|bottom"
            android:text="@string/btn_add_to_order" />
    </LinearLayout>

    <LinearLayout
        android:layout_column="1"
        android:layout_columnWeight="0.25"
        android:layout_gravity="fill"
        android:layout_row="1"
        android:layout_rowWeight="0.2"
        android:orientation="vertical">

        <ImageView
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_gravity="center"
            android:scaleType="fitXY"
            android:src="@drawable/sandwich" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/sandwich"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="2€" />

        <TextView
            android:id="@+id/order_sandwich_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="x 3"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|bottom"
            android:text="@string/btn_add_to_order" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_column="0"
        android:layout_gravity="fill"
        android:layout_row="2"
        android:layout_columnSpan="2"
        android:layout_columnWeight="0.5"
        android:layout_rowWeight="0.25"
        android:paddingRight="10dp"
        android:paddingLeft="10dp">

        <LinearLayout
            android:id="@+id/layout_coffee"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:clickable="true"
            android:focusable="true" >

            <ImageView
                android:id="@+id/img_coffee_selected"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/circle_green"
                android:visibility="invisible" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/voucher"
                android:layout_gravity="center"
                android:textSize="12sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/voucher_coffee"
                android:layout_gravity="center"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/voucher_coffee_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/voucher_number"
                android:layout_gravity="center"/>

            <View
                android:id="@+id/voucher_coffee_active"
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:background="@drawable/border_green"
                android:layout_marginTop="10dp"
                android:visibility="invisible"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_popcorn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_marginRight="3dp"
            android:layout_marginLeft="3dp"
            android:clickable="true"
            android:focusable="true" >

            <ImageView
                android:id="@+id/img_popcorn_selected"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/circle_green"
                android:visibility="invisible" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/voucher"
                android:layout_gravity="center"
                android:textSize="12sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/voucher_popcorn"
                android:layout_gravity="center"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/voucher_popcorn_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/voucher_number"
                android:layout_gravity="center"/>

            <View
                android:id="@+id/voucher_popcorn_active"
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:background="@drawable/border_green"
                android:layout_marginTop="10dp"
                android:visibility="invisible"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_discount"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:clickable="true"
            android:focusable="true" >

            <ImageView
                android:id="@+id/img_discount_selected"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/circle_green"
                android:visibility="invisible" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/voucher"
                android:layout_gravity="center"
                android:textSize="12sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/voucher_discount"
                android:layout_gravity="center"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/voucher_discount_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/voucher_number"
                android:layout_gravity="center"/>

            <View
                android:id="@+id/voucher_discount_active"
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:background="@drawable/border_green"
                android:layout_marginTop="10dp"
                android:visibility="invisible"/>

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btn_create_order"
        android:layout_column="0"
        android:layout_row="3"
        android:text="@string/btn_create_order"
        android:layout_columnSpan="2"
        android:layout_gravity="center"
        android:width="250dp"
        android:layout_rowWeight="0.25"
        android:onClick="generateOrder"/>

</GridLayout>