<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Transactions.OrderProductsFragment">

    <LinearLayout
        android:layout_column="0"
        android:layout_columnWeight="0.5"
        android:layout_gravity="fill"
        android:layout_row="0"
        android:layout_rowWeight="0.2"
        android:orientation="vertical"
        android:layout_marginTop="32dp"
        >

        <ImageView
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_gravity="center"
            android:scaleType="fitXY"
            android:src="@drawable/coffee" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/coffee"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="0.60€" />

        <TextView
            android:id="@+id/order_coffee_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="x 0"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_column="1"
        android:layout_columnWeight="0.5"
        android:layout_gravity="fill"
        android:layout_row="0"
        android:layout_rowWeight="0.2"
        android:orientation="vertical"
        android:layout_marginTop="32dp"
        >

        <ImageView
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_gravity="center"
            android:scaleType="fitXY"
            android:src="@drawable/soda" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/soda"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="1.20€" />

        <TextView
            android:id="@+id/order_soda_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="x 0"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_column="0"
        android:layout_columnWeight="0.5"
        android:layout_gravity="fill_horizontal"
        android:layout_row="1"
        android:layout_rowWeight="0.2"
        android:orientation="vertical">

        <ImageView
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_gravity="center"
            android:scaleType="fitXY"
            android:src="@drawable/popcorn" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/popcorn"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="2.50€" />

        <TextView
            android:id="@+id/order_popcorn_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="x 0"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_column="1"
        android:layout_columnWeight="0.25"
        android:layout_gravity="fill"
        android:layout_row="1"
        android:layout_rowWeight="0.2"
        android:orientation="vertical">

        <ImageView
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_gravity="center"
            android:scaleType="fitXY"
            android:src="@drawable/sandwich" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/sandwich"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="3.0€" />

        <TextView
            android:id="@+id/order_sandwich_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="x 0"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>




</GridLayout>